Prepare package for git distribution: add package.json exports, README, and .gitignore

--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "description": "Next.js developer toolkit plugin",
   "main": "index.js",
+  "exports": {
+    ".": "./index.js",
+    "./config": "./config.js",
+    "./layout": "./layout.jsx",
+    "./page": "./page.jsx"
+  },
   "peerDependencies": {
     "next": ">=14.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
   "dependencies": {
-    "lucide-react": "^0.0.1"
+    "lucide-react": "^0.468.0"
   }
 }
-
